--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="profile-section">
             <div class="img-container">
                 <!-- Ensure this file exists or change to URL -->
-                <img src="profile.jpg" alt="John Ellison" class="profile-img">
+                <img src="refi-orbified-pfp.webp" alt="John Ellison" class="profile-img">
             </div>
             <h1 class="profile-name">John Ellison</h1>
             <p class="profile-bio">Founder, angel investor and startup consultant building with AI.</p>
